fix word-break in sort panel

--- a/src/components/sort-panel/sort-panel.scss
+++ b/src/components/sort-panel/sort-panel.scss
@@ -19,6 +19,7 @@
             color: white;
             font-size: 20px;
             word-wrap: break-word;
+            word-break: break-all; 
         }
     }
 
